--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,21 @@ jobs:
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
-
+      - name: Rename ksud
+        run: |
+          mkdir -p ksud
+          for dir in ./ksud-*; do
+              if [ -d "$dir" ]; then
+                 echo "----- Rename $dir -----"
+                 ksud_platform_name=$(basename "$dir")
+                 find "$dir" -type f -name "ksud" -path "*/release/*" | while read -r ksud_file; do
+                   if [ -f "$ksud_file" ]; then
+                     mv "$ksud_file" "ksud/$ksud_platform_name"
+                   fi
+                 done
+              fi
+          done
+          
       - name: Display structure of downloaded files
         run: ls -R
 
@@ -25,4 +39,4 @@ jobs:
         with:
           files: |
             manager/*.apk
-            ksud-*
+            ksud/ksud-*
