--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -37,6 +37,15 @@ ifeq ($(shell grep -q "struct selinux_state " $(srctree)/security/selinux/includ
 ccflags-y += -DKSU_COMPAT_HAS_SELINUX_STATE
 endif
 
+# This feature is introduced in linux 5.0-rc1
+ifeq ($(shell grep -q "get_cred_rcu" $(srctree)/include/linux/cred.h; echo $$?),0)
+ccflags-y += -DKSU_GET_CRED_RCU
+else
+$(info -- Your kernel does not have get_cred_rcu, please backport it.)
+$(info -- How to backport: https://github.com/tiann/KernelSU/pull/2320#issuecomment-2564232958)
+$(info -- Fallback to old changes.)
+endif
+
 # tiann/KernelSU
 KSU_EXPECTED_SIZE := 0x033b
 KSU_EXPECTED_HASH := c371061b19d8c7d7d6133c6a9bafe198fa944e50c1b31c9d8daa8d7f1fc2d2d6
