kernel: improve get_cred_rcu guard
Signed-off-by: rsuntk <rissu.ntk@gmail.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -39,9 +39,9 @@ endif
 
 # This feature was introduced in linux 5.0-rc1
 ifeq ($(shell grep -q "get_cred_rcu" $(srctree)/include/linux/cred.h; echo $$?),0)
-ccflags-y += -DKSU_GET_CRED_RCU
+ccflags-y += -DKSU_COMPAT_GET_CRED_RCU
 else
-$(info -- Your kernel does not have get_cred_rcu, please backport it.)
+$(info -- Your kernel does not support get_cred_rcu, please backport it.)
 $(info -- How to backport: https://github.com/tiann/KernelSU/pull/2320#issuecomment-2564232958)
 $(info -- Fallback to old changes.)
 endif
