--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -14,6 +14,11 @@ kernelsu-objs += selinux/rules.o
 ccflags-y += -I$(srctree)/security/selinux -I$(srctree)/security/selinux/include
 ccflags-y += -I$(objtree)/security/selinux -include $(srctree)/include/uapi/asm-generic/errno.h
 
+# Do checks before compile
+ifneq ($(shell grep -q "int path_umount" $(srctree)/fs/namespace.c; echo $$?),0)
+$(error -- No path_umount detected !! Read: https://kernelsu.org/guide/how-to-integrate-for-non-gki.html#how-to-backport-path-umount)
+endif
+
 obj-$(CONFIG_KSU) += kernelsu.o
 
 # .git is a text file while the module is imported by 'git submodule add'.
@@ -41,9 +46,12 @@ endif
 ifeq ($(shell grep -q "get_cred_rcu" $(srctree)/include/linux/cred.h; echo $$?),0)
 ccflags-y += -DKSU_COMPAT_GET_CRED_RCU
 else
-$(info -- Your kernel does not support get_cred_rcu, its recommended to backport it.)
-$(info -- How to backport: https://github.com/tiann/KernelSU/pull/2320#issuecomment-2564232958)
-$(info -- Fallback to old changes.)
+ifeq ($(shell grep -q "atomic_long_inc_not_zero" $(srctree)/include/linux/cred.h; echo $$?),0)
+$(info -- KernelSU compat: atomic_long_inc_not_zero detected.)
+ccflags-y += -DKSU_COMPAT_LONG_INC
+else
+$(info -- KernelSU compat: atomic_inc_not_zero detected.)
+endif
 endif
 
 ifndef KSU_EXPECTED_SIZE
@@ -65,10 +73,6 @@ $(info -- Supported Unofficial Manager: rsuntk (Non-GKI), 5ec1cff (GKI))
 
 ccflags-y += -DEXPECTED_SIZE=$(KSU_EXPECTED_SIZE)
 ccflags-y += -DEXPECTED_HASH=\"$(KSU_EXPECTED_HASH)\"
-
-ifeq ($(shell grep -q "int path_umount" $(srctree)/fs/namespace.c; echo $$?),0)
-ccflags-y += -DKSU_UMOUNT
-endif
 
 ccflags-y += -Wno-implicit-function-declaration -Wno-strict-prototypes -Wno-int-conversion -Wno-gcc-compat
 ccflags-y += -Wno-declaration-after-statement -Wno-unused-function
