--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -46,11 +46,12 @@ endif
 ifeq ($(shell grep -q "get_cred_rcu" $(srctree)/include/linux/cred.h; echo $$?),0)
 ccflags-y += -DKSU_COMPAT_GET_CRED_RCU
 else
-ifeq ($(shell grep -q "atomic_long_inc_not_zero" $(srctree)/include/linux/cred.h; echo $$?),0)
-$(info -- KernelSU compat: atomic_long_inc_not_zero detected.)
+# https://github.com/gregkh/linux/commit/123e44b9a49a42ff5313ec65256f1540d7c52fa0
+ifeq ($(shell grep -q "atomic_long_inc" $(srctree)/include/linux/cred.h; echo $$?),0)
+$(info -- KernelSU compat: atomic_long_t detected.)
 ccflags-y += -DKSU_COMPAT_LONG_INC
 else
-$(info -- KernelSU compat: atomic_inc_not_zero detected.)
+$(info -- KernelSU compat: atomic_t detected.)
 endif
 endif
 
