--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install cross
         run: |
-          cargo install cross --git https://github.com/cross-rs/cross --rev 66845c1
+          RUSTFLAGS="" cargo install cross --git https://github.com/cross-rs/cross --rev 66845c1
 
       - name: Run clippy
         run: |
