kernel: Do not compile if UH, KDP and RKP enabled
UH, a kernel hypervisor driver that prevent any root permission.
If KernelSU driver was compiled with UH active, phone will freeze.

Need an accurate way to detect Samsung kernel, but currently we
depends on "drivers/samsung".

The reason why we don't put this on Kconfig is due to compatibility issue
with other OEMs.

Signed-off-by: rsuntk <rissu.ntk@gmail.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -92,6 +92,12 @@ ccflags-y += -DKSU_MANAGER_PACKAGE=\"$(KSU_MANAGER_PACKAGE)\"
 $(info -- KernelSU Manager package name: $(KSU_MANAGER_PACKAGE))
 endif
 
+# checks is it Samsung kernels or not
+# TODO: Search for accurate detection
+ifeq ($(shell test -d $(srctree)/drivers/samsung; echo $$?),0)
+ccflags-y += -DIS_SAMSUNG_KERNEL
+endif
+
 $(info -- Official KernelSU Manager signature size: $(KSU_EXPECTED_SIZE))
 $(info -- Official KernelSU Manager signature hash: $(KSU_EXPECTED_HASH))
 $(info -- Supported Unofficial Manager: rsuntk (Non-GKI), 5ec1cff (GKI)) 
