kernel: refactor kconfig options to allow kprobes on non-GKI kernel (#75)
* Allowing KPROBES hook on non-GKI kernel (not tested, please open an issue if something wrong happened.)
* Add kconfig option to detect is that a GKI kernel or not (DO NOT DISABLE)
* Keeping GKI's KSU_MANUAL_HOOK compatibility by adding "default n if KSU_MANUAL_HOOK" incase devs already put CONFIG_KSU_MANUAL_HOOK in their defconfig.
* Syscalls hook methods is determined automatically by Linux version. If GKI or LKM use, KPROBES_HOOK. If not use, MANUAL_HOOK.
* Devs can toggle this on their kernel defconfig
* And added a function to detect dualism on syscall hook method.
* Re-added devpts syscall handler compat for non-GKI.

[ NOTE: "Haven't test this changes on GKI kernel, we'll fix it if something went wrong." ] 
Signed-off-by: Faris <90097027+rsuntk@users.noreply.github.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -31,15 +31,26 @@ config KSU_CMDLINE
 	  Enable a cmdline called kernelsu.enabled
 	  Value 1 means enabled, value 0 means disabled.
 
+config KSU_COMPAT_GKI
+	bool "KernelSU Compat for GKI kernels"
+	default y if $(VERSION) >= 5 && $(PATCHLEVEL) >= 1
+	default n
+
 config KSU_MANUAL_HOOK
 	bool "Manual hooking GKI kernels without kprobes"
 	depends on KSU && KSU != m
-	depends on KPROBES
+	default y if !KSU_COMPAT_GKI || !KPROBES
 	default n
 	help
-	  Keep KPROBES enabled but do not use KPROBES to implement
-	  the hooks required by KernelSU, but instead hook them manually.
-	  This function only available on GKI kernels, non-GKI are not
-	  affected.
+	  Hook required KernelSU syscalls with manually-patched function.
+
+config KSU_KPROBES_HOOK
+	bool "Hook required syscalls with KPROBES"
+	depends on KSU && KPROBES
+	default y if KSU_COMPAT_GKI || KSU = m
+	default n if KSU_MANUAL_HOOK
+	default n
+	help
+	  Hook required KernelSU syscalls with Kernel Probes.
 
 endmenu
