--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -14,29 +14,6 @@ kernelsu-objs += selinux/rules.o
 ccflags-y += -I$(srctree)/security/selinux -I$(srctree)/security/selinux/include
 ccflags-y += -I$(objtree)/security/selinux -include $(srctree)/include/uapi/asm-generic/errno.h
 
-# https://github.com/tiann/KernelSU/pull/2102/files#diff-3a325663233178293ee38b8161f3be511a466af7e0156b9d03d5aed0497564bfR19
-IS_GKI := $(strip $(shell \
-    if [ "$(VERSION)" -ge "5" -a "$(PATCHLEVEL)" -ge "1" ]; then \
-      echo TRUE; \
-    else \
-      echo FALSE; \
-    fi \
-  ))
-
-ifeq ($(IS_GKI),TRUE)
-$(info -- KernelSU: Kernel version is GKI.)
-# GKI manual hook checks
-# https://github.com/Pzqqt/android_kernel_xiaomi_marble/commit/5b8596b5604bcd0e6e12697a01136a0bb9eb0257
-ifeq ($(strip $(CONFIG_KSU_MANUAL_HOOK)),y)
-$(info -- KernelSU: Hooks with Manual hook!)
-ifeq ($(strip $(CONFIG_KSU)),m)
-$(error CONFIG_KSU_MANUAL_HOOK cannot be enabled when compiling KernelSU as LKM!)
-endif
-else
-ccflags-y += -DKSU_HOOK_WITH_KPROBES
-endif
-endif
-
 obj-$(CONFIG_KSU) += kernelsu.o
 
 # .git is a text file while the module is imported by 'git submodule add'.
@@ -58,6 +35,18 @@ $(info -- KernelSU: checks ok. Found path_umount)
 else
 $(info -- KernelSU: checks failed, abort.)
 $(error -- Backporting path_umount is mandatory !! Read: https://kernelsu.org/guide/how-to-integrate-for-non-gki.html#how-to-backport-path-umount)
+endif
+
+# Checks hooks state
+ifeq ($(strip $(CONFIG_KSU_KPROBES_HOOK)),y)
+$(info -- KernelSU: Kernel Probes hook.)
+else
+$(info -- KernelSU: Manually-patched hook.)
+endif
+ifeq ($(strip $(CONFIG_KSU_KPROBES_HOOK)),y)
+ifeq ($(strip $(CONFIG_KSU_MANUAL_HOOK)),y)
+$(error -- KernelSU: Duplicated hook method! Please choose one hook method!)
+endif
 endif
 
 # SELinux drivers check
