ci: Commonize build-manager.yml
Signed-off-by: rsuntk <rsuntk@yukiprjkt.my.id>

--- a/.github/workflows/build-manager-spoofed.yml
+++ b/.github/workflows/build-manager-spoofed.yml
@@ -1,4 +1,4 @@
-name: Build Manager
+name: Build Manager (Spoofed)
 
 on:
   push:
@@ -8,13 +8,9 @@ on:
       - 'manager/**'
       - 'kernel/**'
       - 'userspace/ksud/**'
-  pull_request:
-    branches: [ "main" ]
-    paths:
-      - 'manager/**'
 
 jobs:
   build-manager:
     uses: ./.github/workflows/build-manager-common.yml
     with:
-      spoofed: false
+      spoofed: true
