ci: inherit secrets from build-manager-common.yml
Signed-off-by: rsuntk <rsuntk@yukiprjkt.my.id>

--- a/.github/workflows/build-manager.yml
+++ b/.github/workflows/build-manager.yml
@@ -16,5 +16,6 @@ on:
 jobs:
   build-manager:
     uses: ./.github/workflows/build-manager-common.yml
+    secrets: inherit
     with:
       spoofed: false
