--- a/.github/workflows/build-manager.yml
+++ b/.github/workflows/build-manager.yml
@@ -15,8 +15,27 @@ on:
   workflow_call:
 
 jobs:
+  build-ksud:
+    strategy:
+      matrix:
+        include:
+          - target: aarch64-linux-android
+            os: ubuntu-latest
+          - target: armv7-linux-androideabi
+            os: ubuntu-latest
+    uses: ./.github/workflows/ksud.yml
+    with:
+      target: ${{ matrix.target }}
+      os: ${{ matrix.os }}
+
   build-manager:
+    needs: build-ksud
+    strategy:
+      matrix:
+        include:
+          - spoofed: false
+          - spoofed: true
     uses: ./.github/workflows/build-manager-common.yml
     secrets: inherit
     with:
-      spoofed: false
+      spoofed: ${{ matrix.spoofed }}
